--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -81,37 +81,37 @@
                   <VBox prefHeight="70.0" prefWidth="532.0">
                      <children>
                         <MFXTextField fx:id="nomeLavoratore" floatMode="BORDER" floatingText="Nome" prefHeight="45.0" prefWidth="541.0" />
-                        <Label fx:id="nomeLavoratoreError" prefHeight="25.0" prefWidth="532.0" text="OK" visible="false" />
+                        <Label fx:id="nomeLavoratoreError" prefHeight="25.0" prefWidth="532.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="10.0" prefHeight="68.0" prefWidth="532.0">
                      <children>
                         <MFXTextField fx:id="cognomeLavoratore" floatMode="BORDER" floatingText="Cognome" prefHeight="45.0" prefWidth="570.0" />
-                        <Label fx:id="cognomeLavoratoreError" prefHeight="25.0" prefWidth="532.0" text="OK" visible="false" />
+                        <Label fx:id="cognomeLavoratoreError" prefHeight="25.0" prefWidth="532.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="86.0" prefHeight="71.0" prefWidth="532.0">
                      <children>
                         <MFXDatePicker fx:id="dataNascitaLavoratore" floatMode="BORDER" floatingText="Data nascita" prefHeight="45.0" prefWidth="570.0" />
-                        <Label fx:id="dataNascitaLavoratoreError" prefHeight="33.0" prefWidth="598.0" text="OK" visible="false" />
+                        <Label fx:id="dataNascitaLavoratoreError" prefHeight="33.0" prefWidth="598.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="152.0" prefHeight="70.0" prefWidth="532.0">
                      <children>
                         <MFXFilterComboBox fx:id="comuneNascitaLavoratore" floatMode="BORDER" floatingText="Comune nascita" prefHeight="45.0" prefWidth="532.0" />
-                        <Label fx:id="comuneNascitaLavoratoreError" prefHeight="25.0" prefWidth="650.0" text="OK" visible="false" />
+                        <Label fx:id="comuneNascitaLavoratoreError" prefHeight="25.0" prefWidth="650.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="272.0" prefHeight="66.0" prefWidth="532.0">
                      <children>
                         <MFXFilterComboBox fx:id="comuneAbitazioneLavoratore" floatMode="BORDER" floatingText="Comune abitazione" prefHeight="45.0" prefWidth="581.0" />
-                        <Label fx:id="comuneAbitazioneLavoratoreError" prefHeight="26.0" prefWidth="577.0" text="OK" visible="false" />
+                        <Label fx:id="comuneAbitazioneLavoratoreError" prefHeight="26.0" prefWidth="577.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox prefHeight="74.0" prefWidth="532.0">
                      <children>
                         <MFXFilterComboBox fx:id="nazionalitaLavoratore" floatMode="BORDER" floatingText="Nazionalità" prefHeight="45.0" prefWidth="532.0" />
-                        <Label fx:id="nazionalitaLavoratoreError" prefHeight="31.0" prefWidth="623.0" text="OK" visible="false" />
+                        <Label fx:id="nazionalitaLavoratoreError" prefHeight="31.0" prefWidth="623.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -124,13 +124,13 @@
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="80.0" prefWidth="256.0">
                      <children>
                         <MFXTextField fx:id="telefonoLavoratore" floatMode="BORDER" floatingText="Telefono" prefHeight="52.0" prefWidth="446.0" />
-                        <Label fx:id="telefonoLavoratoreError" prefHeight="29.0" prefWidth="427.0" text="OK" visible="false" />
+                        <Label fx:id="telefonoLavoratoreError" prefHeight="29.0" prefWidth="427.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="81.0" prefWidth="256.0">
                      <children>
                         <MFXTextField fx:id="emailLavoratore" floatMode="BORDER" floatingText="Email" prefHeight="52.0" prefWidth="428.0" />
-                        <Label fx:id="emailLavoratoreError" prefHeight="30.0" prefWidth="442.0" text="OK" visible="false" />
+                        <Label fx:id="emailLavoratoreError" prefHeight="30.0" prefWidth="442.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -143,25 +143,25 @@
                   <VBox prefHeight="87.0" prefWidth="243.0">
                      <children>
                         <MFXTextField fx:id="nomeContatto" floatMode="BORDER" floatingText="Nome" prefHeight="52.0" prefWidth="347.0" />
-                        <Label fx:id="nomeContattoError" prefHeight="34.0" prefWidth="347.0" text="OK" visible="false" />
+                        <Label fx:id="nomeContattoError" prefHeight="34.0" prefWidth="347.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="10.0" prefHeight="87.0" prefWidth="243.0">
                      <children>
                         <MFXTextField fx:id="cognomeContatto" floatMode="BORDER" floatingText="Cognome" prefHeight="52.0" prefWidth="340.0" />
-                        <Label fx:id="cognomeContattoError" prefHeight="34.0" prefWidth="388.0" text="OK" visible="false" />
+                        <Label fx:id="cognomeContattoError" prefHeight="34.0" prefWidth="388.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="77.0" prefHeight="82.0" prefWidth="243.0">
                      <children>
                         <MFXTextField fx:id="telefonoContatto" floatMode="BORDER" floatingText="Telefono" prefHeight="51.0" prefWidth="340.0" />
-                        <Label fx:id="telefonoContattoError" prefHeight="32.0" prefWidth="385.0" text="OK" visible="false" />
+                        <Label fx:id="telefonoContattoError" prefHeight="32.0" prefWidth="385.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="144.0" prefHeight="85.0" prefWidth="243.0">
                      <children>
                         <MFXTextField fx:id="emailContatto" floatMode="BORDER" floatingText="E-mail" prefHeight="52.0" prefWidth="362.0" />
-                        <Label fx:id="emailContattoError" prefHeight="34.0" prefWidth="372.0" text="OK" visible="false" />
+                        <Label fx:id="emailContattoError" prefHeight="34.0" prefWidth="372.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -171,19 +171,19 @@
                   <VBox prefHeight="108.0" prefWidth="328.0">
                      <children>
                         <MFXDatePicker fx:id="inizioDisponibilita" floatMode="BORDER" floatingText="Inizio periodo" prefHeight="56.0" prefWidth="349.0" />
-                        <Label fx:id="inizioDisponibilitaError" prefHeight="48.0" prefWidth="358.0" text="OK" visible="false" />
+                        <Label fx:id="inizioDisponibilitaError" prefHeight="48.0" prefWidth="358.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="105.0" prefWidth="328.0">
                      <children>
                         <MFXDatePicker fx:id="fineDisponibilita" floatMode="BORDER" floatingText="Fine periodo" prefHeight="65.0" prefWidth="349.0" />
-                        <Label fx:id="fineDisponibilitaError" prefHeight="37.0" prefWidth="375.0" text="OK" visible="false" />
+                        <Label fx:id="fineDisponibilitaError" prefHeight="37.0" prefWidth="375.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="131.0" prefHeight="109.0" prefWidth="328.0">
                      <children>
                         <MFXFilterComboBox fx:id="comuneDisponibilita" floatMode="BORDER" floatingText="Comune" prefHeight="65.0" prefWidth="347.0" />
-                        <Label fx:id="comuneDisponibilitaError" prefHeight="41.0" prefWidth="366.0" text="OK" visible="false" />
+                        <Label fx:id="comuneDisponibilitaError" prefHeight="41.0" prefWidth="366.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -193,37 +193,37 @@
                   <VBox prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXTextField fx:id="aziendaEsperienza" floatMode="BORDER" floatingText="Nome azienda" prefHeight="50.0" prefWidth="357.0" />
-                        <Label fx:id="aziendaEsperienzaError" prefHeight="26.0" prefWidth="346.0" text="OK" visible="false" />
+                        <Label fx:id="aziendaEsperienzaError" prefHeight="26.0" prefWidth="346.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXTextField fx:id="retribuzioneEsperienza" floatMode="BORDER" floatingText="Retribuzione" prefHeight="50.0" prefWidth="369.0" />
-                        <Label fx:id="retribuzioneEsperienzaError" prefHeight="25.0" prefWidth="347.0" text="OK" visible="false" />
+                        <Label fx:id="retribuzioneEsperienzaError" prefHeight="25.0" prefWidth="347.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="80.0" prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXDatePicker fx:id="inizioEsperienza" floatMode="BORDER" floatingText="Inizio periodo" prefHeight="50.0" prefWidth="353.0" />
-                        <Label fx:id="inizioEsperienzaError" prefHeight="25.0" prefWidth="363.0" text="OK" visible="false" />
+                        <Label fx:id="inizioEsperienzaError" prefHeight="25.0" prefWidth="363.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="150.0" prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXDatePicker fx:id="fineEsperienza" floatMode="BORDER" floatingText="Fine periodo" prefHeight="50.0" prefWidth="354.0" />
-                        <Label fx:id="fineEsperienzaError" prefHeight="26.0" prefWidth="386.0" text="OK" visible="false" />
+                        <Label fx:id="fineEsperienzaError" prefHeight="26.0" prefWidth="386.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="220.0" prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXFilterComboBox fx:id="comuneEsperienza" floatMode="BORDER" floatingText="Comune" prefHeight="49.0" prefWidth="347.0" />
-                        <Label fx:id="comuneEsperienzaError" prefHeight="27.0" prefWidth="364.0" text="OK" visible="false" />
+                        <Label fx:id="comuneEsperienzaError" prefHeight="27.0" prefWidth="364.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="312.0" prefHeight="75.0" prefWidth="225.0">
                      <children>
                         <MFXFilterComboBox fx:id="specializzazioneEsperienza" floatMode="BORDER" floatingText="Specializzazione" prefHeight="49.0" prefWidth="354.0" />
-                        <Label fx:id="specializzazioneEsperienzaError" prefHeight="27.0" prefWidth="353.0" text="OK" visible="false" />
+                        <Label fx:id="specializzazioneEsperienzaError" prefHeight="27.0" prefWidth="353.0" styleClass="errorLabel" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -261,31 +261,31 @@
             <VBox layoutX="306.0" layoutY="645.0" prefHeight="310.0" prefWidth="200.0">
                <children>
                   <MFXCheckListView fx:id="patentiLavoratore" prefHeight="271.0" prefWidth="200.0" />
-                  <Label fx:id="patentiLavoratoreError" prefHeight="39.0" prefWidth="204.0" text="OK" visible="false" wrapText="true" />
+                  <Label fx:id="patentiLavoratoreError" prefHeight="39.0" prefWidth="204.0" styleClass="errorLabel" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
             <VBox layoutX="82.0" layoutY="645.0" prefHeight="310.0" prefWidth="194.0">
                <children>
                   <MFXCheckListView fx:id="lingueLavoratore" prefHeight="269.0" prefWidth="196.0" />
-                  <Label fx:id="lingueLavoratoreError" prefHeight="42.0" prefWidth="229.0" text="OK" visible="false" wrapText="true" />
+                  <Label fx:id="lingueLavoratoreError" prefHeight="42.0" prefWidth="229.0" styleClass="errorLabel" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
             <VBox layoutX="422.0" layoutY="1033.0" prefHeight="345.0" prefWidth="792.0">
                <children>
                   <MFXListView fx:id="listaContattoUrgente" prefHeight="319.0" prefWidth="792.0" />
-                  <Label fx:id="listaContattoUrgenteError" prefHeight="32.0" prefWidth="792.0" text="OK" visible="false" wrapText="true" />
+                  <Label fx:id="listaContattoUrgenteError" prefHeight="32.0" prefWidth="792.0" styleClass="errorLabel" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
             <VBox layoutX="423.0" layoutY="1534.0" prefHeight="310.0" prefWidth="791.0">
                <children>
                   <MFXListView fx:id="listaDisponibilita" prefHeight="279.0" prefWidth="789.0" />
-                  <Label fx:id="listaDisponibilitaError" prefHeight="31.0" prefWidth="828.0" text="OK" visible="false" wrapText="true" />
+                  <Label fx:id="listaDisponibilitaError" prefHeight="31.0" prefWidth="828.0" styleClass="errorLabel" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
             <VBox layoutX="426.0" layoutY="1998.0" prefHeight="451.0" prefWidth="787.0">
                <children>
                   <MFXListView fx:id="listaEsperienze" prefHeight="422.0" prefWidth="836.0" />
-                  <Label fx:id="listaEsperienzeError" prefHeight="29.0" prefWidth="839.0" text="OK" visible="false" wrapText="true" />
+                  <Label fx:id="listaEsperienzeError" prefHeight="29.0" prefWidth="839.0" styleClass="errorLabel" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffecb3" height="100.0" layoutX="655.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
